update launchpad shell to support ignite running on Java 17